--- a/EventManager.Client/Shared/Components/CSM/CsomorShareComponent.razor
+++ b/EventManager.Client/Shared/Components/CSM/CsomorShareComponent.razor
@@ -1,7 +1,7 @@
 ﻿<div class="shared-list">
     <div>
         <div class="em-section-title">Sharing</div>
-        <MatTextField Value="Name" @oninput="RefreshCorrectPersons" FullWidth="true" Dense="true" Label="Search" Outlined="true"></MatTextField>
+        <MudTextField Value="Name" TextChanged="RefreshCorrectPersons" FullWidth="true" Label="Search" Variant="Variant.Outlined" />
         @foreach (var person in CorrectList)
         {
             <div class="correct-person" @onclick="@(() => AddPerson(person.Id))">
@@ -16,10 +16,7 @@
                 <div class="data-row"><strong>Name: </strong> @person.UserName - @(string.IsNullOrEmpty(person.FullName) ? person.Email : person.FullName)</div>
                 <div class="data-row access" @onclick="@(() => ChangeAccess(person.Id))"><strong>Access Type: </strong>@(person.HasWriteAccess ? "Write" : "Read")</div>
                 <div class="data-row"><strong>Added On: </strong>@ManagerAPI.Shared.Helpers.DateHelper.DateToString(person.SharedOn)</div>
-                <MatTooltip Tooltip="@("Remove " + person.UserName)">
-                    <MatIconButton RefBack="@context" Icon="remove" @onclick="@(() => RemovePerson(person.Id))"></MatIconButton>
-                </MatTooltip>
-
+                <MudIconButton Color="Color.Primary" Icon="@Icons.Filled.Remove" OnClick="@(() => RemovePerson(person.Id))" />
             </div>
         }
     </div>
