--- a/EventManager.Client/Shared/Components/CSM/PersonComponent.razor
+++ b/EventManager.Client/Shared/Components/CSM/PersonComponent.razor
@@ -7,15 +7,11 @@
             <span class="spacer"></span>
             @if (IsOpened)
             {
-                <MatTooltip Tooltip="Close">
-                    <MatIconButton RefBack="@context" Icon="expand_less" @onclick="@(() => IsOpened = false)"></MatIconButton>
-                </MatTooltip>
+                <MudIconButton Icon="@Icons.Filled.ExpandLess" OnClick="@(() => IsOpened = false)" Color="Color.Primary" />
             }
             else
             {
-                <MatTooltip Tooltip="Open">
-                    <MatIconButton RefBack="@context" Icon="expand_more" @onclick="@(() => IsOpened = true)"></MatIconButton>
-                </MatTooltip>
+                <MudIconButton Icon="@Icons.Filled.ExpandMore" OnClick="@(() => IsOpened = true)" Color="Color.Primary" />
             }
         </div>
     </div>
@@ -28,36 +24,32 @@
                 <span class="spacer"></span>
                 @if (IsEditable && !IsEdit)
                 {
-                    <MatTooltip Tooltip="Edit">
-                        <MatIconButton RefBack="@context" Icon="edit" @onclick="@(() => IsEdit = true)" Disabled="CheckRole(CsomorRole.Read)"></MatIconButton>
-                    </MatTooltip>
+                    <MudIconButton Icon="@Icons.Filled.Edit" OnClick="@(() => IsEdit = true)" Color="Color.Primary" Disabled="CheckRole(CsomorRole.Read)" />
                 }
                 @if (IsEditable && IsEdit)
                 {
-                    <MatTooltip Tooltip="Back">
-                        <MatIconButton RefBack="@context" Icon="arrow_left" @onclick="@(() => IsEdit = false)"></MatIconButton>
-                    </MatTooltip>
+                    <MudIconButton Icon="@Icons.Filled.ArrowLeft" OnClick="@(() => IsEdit = false)" Color="Color.Primary" />
                 }
             </div>
             @if (IsEdit)
             {
                 <div class="row-body">
                     <div class="w-100">
-                        <MatCheckbox TValue="bool" Value="Person.IsIgnored" ValueChanged="@((val) => ChangeIsIgnoredStatus(Person, val))" Label="Is Ignored"></MatCheckbox> <br />
+                        <MudCheckBox T="bool" Color="Color.Primary" Checked="Person.IsIgnored" CheckedChanged="@((val) => ChangeIsIgnoredStatus(Person, val))" Label="Is ignored" /> <br/>
                         @if (!Person.IsIgnored)
                         {
                             @foreach (var table in Person.Tables)
                             {
                                 <span class="box">
-                                    <MatCheckbox TValue="bool" Value="table.IsAvailable" ValueChanged="@((val) => ChangeIsAvailableStatus(table, val))" Label="@ManagerAPI.Shared.Helpers.WriteHelper.HourInterval(table.Date, 1)"></MatCheckbox>
+                                    <MudCheckBox T="bool" Color="Color.Primary" Checked="table.IsAvailable" CheckedChanged="@((val) => ChangeIsAvailableStatus(table, val))" Label="@ManagerAPI.Shared.Helpers.WriteHelper.HourInterval(table.Date, 1)" />
                                 </span>
                             }
-                            <br />
+                            <br/>
 
                             @foreach (var ignoredWork in Works)
                             {
                                 <span class="box">
-                                    <MatCheckbox ValueChanged="@(val => IgnoredWorkChange(Person, ignoredWork, val))" TValue="bool" Value="WorkIsIgnored(Person, ignoredWork)" Label="@ignoredWork.Name"></MatCheckbox>
+                                    <MudCheckBox T="bool" Color="Color.Primary" Checked="WorkIsIgnored(Person, ignoredWork)" CheckedChanged="@(val => IgnoredWorkChange(Person, ignoredWork, val))" Label="@ignoredWork.Name" />
                                 </span>
                             }
                         }
