--- a/EventManager.Client/Pages/WM/WorkingMonthStatPage.razor
+++ b/EventManager.Client/Pages/WM/WorkingMonthStatPage.razor
@@ -15,8 +15,10 @@
     {
         <div class="action-bar">
             <span class="spacer"></span>
-            <MudIconButton Icon="@Icons.Filled.ChevronLeft" OnClick="@(() => Redirect(false))" Color="Color.Primary" />
-            <MudIconButton Icon="@Icons.Filled.ChevronRight" OnClick="@(() => Redirect(true))" Color="Color.Primary" />
+            <div>
+                <MudIconButton Icon="@Icons.Filled.ChevronLeft" OnClick="@(() => Redirect(false))" Color="Color.Primary" />
+                <MudIconButton Icon="@Icons.Filled.ChevronRight" OnClick="@(() => Redirect(true))" Color="Color.Primary" />
+            </div>
         </div>
         @if (MonthStat != null)
         {
@@ -33,8 +35,8 @@
                 </div>
             </div>
             <div class="type-stat">
-                <div class="em-sub-title">Type statistics</div>
-                @foreach (var type in @MonthStat.Counts)
+        <div class="em-sub-title">Type statistics</div>
+        @foreach (var type in @MonthStat.Counts)
                 {
                     <div class="data-row">
                         <strong>@type.Type:</strong> @type.Count
@@ -42,8 +44,8 @@
                 }
             </div>
             <div class="field-list">
-                <div class="em-sub-title">Working Fields</div>
-                @foreach (var field in @MonthStat.Fields)
+        <div class="em-sub-title">Working Fields</div>
+        @foreach (var field in @MonthStat.Fields)
                 {
                     <FieldComponent WorkingField="field" IsModifiable="false"></FieldComponent>
                 }
