--- a/EventManager.Client/Pages/WM/WorkingWeekStatPage.razor
+++ b/EventManager.Client/Pages/WM/WorkingWeekStatPage.razor
@@ -17,8 +17,10 @@
     {
         <div class="action-bar">
             <span class="spacer"></span>
-            <MudIconButton Icon="@Icons.Filled.ChevronLeft" OnClick="@(() => Redirect(false))" Color="Color.Primary"/>
-            <MudIconButton Icon="@Icons.Filled.ChevronRight" OnClick="@(() => Redirect(true))" Color="Color.Primary"/>
+            <div>
+                <MudIconButton Icon="@Icons.Filled.ChevronLeft" OnClick="@(() => Redirect(false))" Color="Color.Primary" />
+                <MudIconButton Icon="@Icons.Filled.ChevronRight" OnClick="@(() => Redirect(true))" Color="Color.Primary" />
+            </div>
         </div>
         @if (WeekStat != null)
         {
@@ -35,8 +37,8 @@
                 </div>
             </div>
             <div class="type-stat">
-                <div class="em-sub-title">Type statistics</div>
-                @foreach (var type in @WeekStat.Counts)
+        <div class="em-sub-title">Type statistics</div>
+        @foreach (var type in @WeekStat.Counts)
                 {
                     <div class="data-row">
                         <strong>@type.Type:</strong> @type.Count
@@ -44,8 +46,8 @@
                 }
             </div>
             <div class="field-list">
-                <div class="em-sub-title">Working Fields</div>
-                @foreach (var field in @WeekStat.Fields)
+        <div class="em-sub-title">Working Fields</div>
+        @foreach (var field in @WeekStat.Fields)
                 {
                     <FieldComponent WorkingField="field" IsModifiable="false"></FieldComponent>
                 }
