--- a/EventManager.Client/Shared/Components/SL/BookDialog.razor
+++ b/EventManager.Client/Shared/Components/SL/BookDialog.razor
@@ -1,21 +1,29 @@
-﻿<div class="w-100">
-    <EditForm EditContext="@Context">
-        <DataAnnotationsValidator />
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Name" Label="Name" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.Name" />
+﻿<MudDialog>
+    <DialogContent>
+        <div>
+            <EditForm EditContext="@Context">
+                <DataAnnotationsValidator />
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Name" Label="Name" FullWidth="true" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.Name" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Author" Label="Author" FullWidth="true" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.Author" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Description" Label="Description" FullWidth="true" Variant="Variant.Outlined" Lines="3" />
+                    <ValidationMessage For="() => Model.Description" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudDatePicker @bind-Date="Model.Publish" Label="Publish" InputVariant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.Publish" />
+                </div>
+            </EditForm>
         </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Author" Label="Author" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.Author" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Description" Label="Description" Dense="true" Outlined="true" TextArea="true"></MatTextField>
-            <ValidationMessage For="() => Model.Description" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatDatePicker class="w-100" @bind-Value="Model.Publish" Dense="true" Label="Publish" Format="yyyy-MM-dd" Outlined="true" AllowInput="false"></MatDatePicker>
-            <ValidationMessage For="() => Model.Publish" />
-        </div>
-    </EditForm>
-</div>
+    </DialogContent>
+    <DialogActions>
+            <MudButton OnClick="Cancel">Cancel</MudButton>
+            <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+        </DialogActions>
+</MudDialog>
