--- a/EventManager.Client/Shared/Components/SL/BookReadSelectorDialog.razor
+++ b/EventManager.Client/Shared/Components/SL/BookReadSelectorDialog.razor
@@ -1,15 +1,23 @@
-﻿<div class="sl-book-read-selector-dialog">
-    @if (IsLoading)
-    {
-        <Loader></Loader>
-    }
-    else
-    {
-        @if (List != null && List.Count > 0)
-        {
-            <div class="book-list">
-                <ListTable Header="Header" Body="List" TList="ManagerAPI.Shared.DTOs.SL.MyBookSelectorListDto" IsSelectionEnabled="true" SelectedIndexes="SelectedIndexList" FooterDisplay="false" OnRowClick="@(e => SwitchReadFlag(e))"></ListTable>
-            </div>
-        }
-    }
-</div>
+﻿<MudDialog>
+    <DialogContent>
+        <div class="sl-book-read-selector-dialog">
+            @if (IsLoading)
+            {
+                <Loader></Loader>
+            }
+            else
+            {
+                @if (List != null && List.Count > 0)
+                {
+                    <div class="book-list">
+                        <ListTable Header="Header" Body="List" TList="ManagerAPI.Shared.DTOs.SL.MyBookSelectorListDto" IsSelectionEnabled="true" SelectedIndexes="SelectedIndexList" FooterDisplay="false" OnRowClick="@(SwitchReadFlag)"></ListTable>
+                    </div>
+                }
+            }
+        </div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
