--- a/EventManager.Client/Pages/WM/WorkingWeekStatPage.razor
+++ b/EventManager.Client/Pages/WM/WorkingWeekStatPage.razor
@@ -27,10 +27,10 @@
             <div class="stat-box">
                 <div class="em-sub-title">Statistics</div>
                 <div class="data-row">
-                    <strong>Summary hours: </strong> @WeekStat.HourSum
+                    <strong>Summary hours: </strong> @($"{WeekStat.HourSum:0.00} h")
                 </div>
                 <div class="data-row">
-                    <strong>Average hours: </strong> @Math.Round(WeekStat.HourAvg, 2)
+                    <strong>Average hours: </strong> @($"{WeekStat.HourAvg:0.00} h")
                 </div>
                 <div class="data-row">
                     <strong>Active / Work days: </strong> @WeekStat.ActiveDays / @WeekStat.WorkDays
