--- a/EventManager.Client/Shared/Components/SL/MovieCommentComponent.razor
+++ b/EventManager.Client/Shared/Components/SL/MovieCommentComponent.razor
@@ -7,7 +7,8 @@
         @if (IsEdit)
         {
             <div class="col col-12 p-1">
-                <MatTextField class="w-100" @bind-Value="CommentText" Label="Comment" Dense="true" Outlined="true" TextArea="true"></MatTextField>
+                <MudTextField @bind-Value="CommentText" Label="Comment" FullWidth="true" Variant="Variant.Outlined"
+                Lines="3" />
             </div>
         }
         else
@@ -21,13 +22,13 @@
             <span class="spacer"></span>
             @if (IsEdit)
             {
-                <MatButton @onclick="SaveEdit">Save</MatButton>
-                <MatButton @onclick="CancelEdit">Cancel</MatButton>
+                <MudButton OnClick="SaveEdit">Save</MudButton>
+                <MudButton OnClick="CancelEdit">Cancel</MudButton>
             }
             else
             {
-                <MatButton @onclick="EditComment">Edit</MatButton>
-                <MatButton @onclick="DeleteComment">Delete</MatButton>
+                <MudButton OnClick="EditComment">Edit</MudButton>
+                <MudButton OnClick="DeleteComment">Delete</MudButton>
             }
         </div>
     }
