--- a/EventManager.Client/Shared/Components/SL/MovieDialog.razor
+++ b/EventManager.Client/Shared/Components/SL/MovieDialog.razor
@@ -1,29 +1,42 @@
-﻿<div class="w-100">
-    <EditForm EditContext="@Context">
-        <DataAnnotationsValidator />
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Title" Label="Title" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.Title" />
+﻿<MudDialog>
+    <DialogContent>
+        <div>
+            <EditForm EditContext="@Context">
+                <DataAnnotationsValidator />
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Title" Label="Title" FullWidth="true" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.Title" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudNumericField @bind-Value="Model.ReleaseYear" Label="Release Year" FullWidth="true"
+                        Variant="Variant.Outlined" Min="0" Step="1" />
+                    <ValidationMessage For="() => Model.ReleaseYear" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Description" Label="Description" FullWidth="true"
+                        Variant="Variant.Outlined" Lines="3" />
+                    <ValidationMessage For="() => Model.Description" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Director" Label="Director" FullWidth="true"
+                        Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.Director" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudNumericField @bind-Value="Model.Length" Label="Length" FullWidth="true"
+                        Variant="Variant.Outlined" Min="0" Step="1" />
+                    <ValidationMessage For="() => Model.Length" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.TrailerUrl" Label="Trailer Url" FullWidth="true"
+                        Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.TrailerUrl" />
+                </div>
+            </EditForm>
         </div>
-        <div class="col col-12 p-1">
-            <MatNumericUpDownField class="w-100" DecimalPlaces="0" Minimum="0" @bind-Value="Model.ReleaseYear" Dense="true" Label="Release Year" Outlined="true"></MatNumericUpDownField>
-            <ValidationMessage For="() => Model.ReleaseYear" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Description" Label="Description" Dense="true" Outlined="true" TextArea="true"></MatTextField>
-            <ValidationMessage For="() => Model.Description" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Director" Label="Director" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.Director" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatNumericUpDownField class="w-100" DecimalPlaces="0" Minimum="0" @bind-Value="Model.Length" Dense="true" Label="Length" Outlined="true"></MatNumericUpDownField>
-            <ValidationMessage For="() => Model.Length" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.TrailerUrl" Label="Trailer Url" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.TrailerUrl" />
-        </div>
-    </EditForm>
-</div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
