--- a/EventManager.Client/Pages/SL/SeriesDataPage.razor
+++ b/EventManager.Client/Pages/SL/SeriesDataPage.razor
@@ -17,59 +17,53 @@
         <div class="action-bar">
             @if (CanAddOrEdit)
             {
-                <MatTooltip Tooltip="Edit Series">
-                    <MatIconButton RefBack="@context" Icon="edit" @onclick="OpenEditSeriesDialog"></MatIconButton>
-                </MatTooltip>
+                <div>
+                    <MudIconButton Icon="@Icons.Filled.Edit" OnClick="OpenEditSeriesDialog" />
+                </div>
             }
             @if (CanDelete)
             {
-                <MatTooltip Tooltip="Delete Series">
-                    <MatIconButton RefBack="@context" Icon="delete" @onclick="OpenDeleteDialog"></MatIconButton>
-                </MatTooltip>
+                <div>
+                    <MudIconButton Icon="@Icons.Filled.Delete" OnClick="OpenDeleteDialog" />
+                </div>
             }
             @if (CanAddOrEdit)
             {
-                <MatTooltip Tooltip="Edit Image">
-                    <MatIconButton RefBack="@context" Icon="image" @onclick="OpenEditSeriesImageDialog"></MatIconButton>
-                </MatTooltip>
-                <MatTooltip Tooltip="Edit Categories">
-                    <MatIconButton RefBack="@context" Icon="category" @onclick="OpenEditSeriesCategoriesDialog"></MatIconButton>
-                </MatTooltip>
+                <div>
+                    <MudIconButton Icon="@Icons.Filled.Image" OnClick="OpenEditSeriesImageDialog" />
+                    <MudIconButton Icon="@Icons.Filled.Category" OnClick="OpenEditSeriesCategoriesDialog" />
+                </div>
             }
 
             @if (Series != null)
             {
                 @if (Series.IsMine)
                 {
-                    <MatTooltip Tooltip="Remove from My list">
-                        <MatIconButton RefBack="@context" Icon="remove" @onclick="RemoveFromMySeriesList"></MatIconButton>
-                    </MatTooltip>
-                    @if (Series.Seasons != null && Series.Seasons.Count > 0 && Series.Seasons.Sum(x => x.Episodes.Count) > 0)
-                    {
-                        @if (Series.IsSeen)
+                    <div>
+                        <MudIconButton Icon="@Icons.Filled.Remove" OnClick="RemoveFromMySeriesList" />
+                        @if (Series.Seasons != null && Series.Seasons.Count > 0 && Series.Seasons.Sum(x => x.Episodes.Count) > 0)
                         {
-                            <MatTooltip Tooltip="Set to not seen">
-                                <MatIconButton RefBack="@context" Icon="visibility_off" @onclick="@(() => SetSeenStatus(false))"></MatIconButton>
-                            </MatTooltip>
+                            @if (Series.IsSeen)
+                            {
+                                <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetSeenStatus(false))" />
+                            }
+                            else
+                            {
+                                <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetSeenStatus(true))" />
+                            }
                         }
-                        else
-                        {
-                            <MatTooltip Tooltip="Set to seen">
-                                <MatIconButton RefBack="@context" Icon="visibility" @onclick="@(() => SetSeenStatus(true))"></MatIconButton>
-                            </MatTooltip>
-                        }
-                    }
+                    </div>
                 }
                 else
                 {
-                    <MatTooltip Tooltip="Add to My list">
-                        <MatIconButton RefBack="@context" Icon="add" @onclick="AddToMySeriesList"></MatIconButton>
-                    </MatTooltip>
+                    <div>
+                        <MudIconButton Icon="@Icons.Filled.Add" OnClick="AddToMySeriesList" />
+                    </div>
                 }
             }
             <span class="spacer"></span>
-            <MatButton @onclick="@(() => Navigation.NavigateTo("/series"))">Series List</MatButton>
-            <MatButton @onclick="@(() => Navigation.NavigateTo("/my-series"))">My Series List</MatButton>
+            <MudButton OnClick="@(() => Navigation.NavigateTo("/series"))">Series List</MudButton>
+                <MudButton OnClick="@(() => Navigation.NavigateTo("/my-series"))">My Series List</MudButton>
         </div>
         @if (Series != null)
         {
@@ -121,7 +115,7 @@
                             <div class="rates">
                                 @foreach (var rate in RateList)
                                 {
-                                    <MatIcon Class="rate-icon" Icon="@(rate <= Series.Rate ? "star" : "star_border")" @onclick="@(() => UpdateRate(rate))" title="@rate"></MatIcon>
+                                    <MudIcon Class="rate-icon" Icon="@(rate <= Series.Rate ? Icons.Filled.Star : Icons.Filled.StarBorder)" @onclick="@(() => UpdateRate(rate))" Tag="@rate"></MudIcon>
                                 }
                             </div>
                         </div>
@@ -149,9 +143,7 @@
                                     <span class="spacer"></span>
                                     @if (CanDelete)
                                     {
-                                        <MatTooltip Tooltip="Delete Season">
-                                            <MatIconButton RefBack="@context" Icon="delete" @onclick="@(() => OpenDeleteSeasonDialog(season))"></MatIconButton>
-                                        </MatTooltip>
+                                        <MudIconButton Icon="@Icons.Filled.Delete" OnClick="@(() => OpenDeleteSeasonDialog(season))" />
                                     }
                                 </div>
                                 <div class="body">
@@ -164,9 +156,7 @@
                                                     <span class="spacer"></span>
                                                     @if (CanDelete)
                                                     {
-                                                        <MatTooltip Tooltip="Delete Episode">
-                                                            <MatIconButton RefBack="@context" Icon="delete" @onclick="@(() => OpenDeleteEpisodeDialog(episode))"></MatIconButton>
-                                                        </MatTooltip>
+                                                        <MudIconButton Icon="@Icons.Filled.Delete" OnClick="@(() => OpenDeleteEpisodeDialog(episode))" />
                                                     }
                                                 </div>
                                                 <div class="ep-body">
@@ -174,22 +164,16 @@
                                                 </div>
                                                 <div class="ep-foot">
                                                     <span class="spacer"></span>
-                                                    <MatTooltip Tooltip="@($"Open Episode {episode.Title}")">
-                                                        <MatIconButton RefBack="@context" Icon="open_in_new" @onclick="@(() => OpenEpisode(episode.Id))"></MatIconButton>
-                                                    </MatTooltip>
+                                                    <MudIconButton Icon="@Icons.Filled.OpenInNew" OnClick="@(() => OpenEpisode(episode.Id))" />
                                                     @if (Series.IsMine)
                                                     {
                                                         @if (episode.Seen)
                                                         {
-                                                            <MatTooltip Tooltip="@($"Set to not seen {episode.Title}")">
-                                                                <MatIconButton RefBack="@context" Icon="visibility_off" @onclick="@(() => SetEpisodeSeenStatus(episode.Id, false))"></MatIconButton>
-                                                            </MatTooltip>
+                                                            <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetEpisodeSeenStatus(episode.Id, false))" />
                                                         }
                                                         else
                                                         {
-                                                            <MatTooltip Tooltip="@($"Set to seen {episode.Title}")">
-                                                                <MatIconButton RefBack="@context" Icon="visibility" @onclick="@(() => SetEpisodeSeenStatus(episode.Id, true))"></MatIconButton>
-                                                            </MatTooltip>
+                                                            <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetEpisodeSeenStatus(episode.Id, true))" />
                                                         }
                                                     }
                                                 </div>
@@ -205,9 +189,7 @@
                                             <span class="spacer"></span>
                                             @if (CanAddOrEdit)
                                             {
-                                                <MatTooltip Tooltip="@($"Add Episode to season {season.Number}")">
-                                                    <MatIconButton RefBack="@context" Icon="add" @onclick="@(() => AddIncrementedEpisode(season.Id))"></MatIconButton>
-                                                </MatTooltip>
+                                                <MudIconButton Icon="@Icons.Filled.Add" OnClick="@(() => AddIncrementedEpisode(season.Id))" />
                                             }
                                             @if (Series.IsMine)
                                             {
@@ -215,15 +197,11 @@
                                                 {
                                                     @if (season.IsSeen)
                                                     {
-                                                        <MatTooltip Tooltip="@($"Set to not seen season {season.Number}")">
-                                                            <MatIconButton RefBack="@context" Icon="visibility_off" @onclick="@(() => SetSeasonSeenStatus(season.Id, false))"></MatIconButton>
-                                                        </MatTooltip>
+                                                        <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetSeasonSeenStatus(season.Id, false))" />
                                                     }
                                                     else
                                                     {
-                                                        <MatTooltip Tooltip="@($"Set to seen season {season.Number}")">
-                                                            <MatIconButton RefBack="@context" Icon="visibility" @onclick="@(() => SetSeasonSeenStatus(season.Id, true))"></MatIconButton>
-                                                        </MatTooltip>
+                                                        <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetSeasonSeenStatus(season.Id, true))" />
                                                     }
                                                 }
                                             }
@@ -242,9 +220,7 @@
                             <span class="spacer"></span>
                             @if (CanAddOrEdit)
                             {
-                                <MatTooltip Tooltip="Add Season to Series">
-                                    <MatIconButton RefBack="@context" Icon="add" @onclick="AddIncrementedSeason"></MatIconButton>
-                                </MatTooltip>
+                                <MudIconButton Icon="@Icons.Filled.Add" OnClick="AddIncrementedSeason" />
                             }
                         </div>
                     </div>
@@ -260,11 +236,11 @@
 
                         <div class="input-panel">
                             <div class="col col-12 p-1">
-                                <MatTextField class="w-100" @bind-Value="Comment" Label="Comment" Dense="true" Outlined="true" TextArea="true"></MatTextField>
+                                <MudTextField @bind-Value="Comment" Label="Comment" FullWidth="true" Variant="Variant.Outlined" Lines="3" />
                             </div>
                             <div class="down-row">
                                 <span class="spacer"></span>
-                                <MatButton @onclick="SaveComment">Comment</MatButton>
+                                <MudButton OnClick="SaveComment">Comment</MudButton>
                             </div>
                         </div>
                     </div>
