--- a/EventManager.Client/Pages/SL/SeriesListPage.razor
+++ b/EventManager.Client/Pages/SL/SeriesListPage.razor
@@ -14,9 +14,7 @@
         <div class="action-bar">
             @if (CanAdd)
             {
-                <MatTooltip Tooltip="Add Series">
-                    <MatIconButton RefBack="@context" Icon="add" @onclick="OpenAddSeriesDialog"></MatIconButton>
-                </MatTooltip>
+                <MudIconButton Icon="@Icons.Filled.Add" OnClick="OpenAddSeriesDialog" />
             }
         </div>
         @if (SeriesList != null && SeriesList.Count > 0)
