--- a/EventManager.Client/Shared/Components/SL/EpisodeDialog.razor
+++ b/EventManager.Client/Shared/Components/SL/EpisodeDialog.razor
@@ -1,13 +1,23 @@
-﻿<div class="w-100">
-    <EditForm EditContext="@Context">
-        <DataAnnotationsValidator />
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Title" Label="Title" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.Title" />
+﻿<MudDialog>
+    <DialogContent>
+        <div>
+            <EditForm EditContext="@Context">
+                <DataAnnotationsValidator />
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Title" Label="Title" FullWidth="true" Variant="Variant.Outlined" />
+                    </MatTextField>
+                    <ValidationMessage For="() => Model.Title" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Description" Label="Description" FullWidth="true"
+                        Variant="Variant.Outlined" Lines="3" />
+                    <ValidationMessage For="() => Model.Description" />
+                </div>
+            </EditForm>
         </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Description" Label="Description" Dense="true" Outlined="true" TextArea="true"></MatTextField>
-            <ValidationMessage For="() => Model.Description" />
-        </div>
-    </EditForm>
-</div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
