--- a/EventManager.Client/Shared/Components/SL/EpisodeImageDialog.razor
+++ b/EventManager.Client/Shared/Components/SL/EpisodeImageDialog.razor
@@ -1,3 +1,15 @@
-﻿<div class="w-100">
-    <MatFileUpload OnChange="@FilesReady"></MatFileUpload>
-</div>
+﻿<MudDialog>
+    <DialogContent>
+        <div>
+            <InputFile id="fileInput" OnChange="FilesReady" hidden multiple />
+            <MudButton HtmlTag="label" Variant="Variant.Filled" Color="Color.Primary"
+                StartIcon="@Icons.Filled.CloudUpload" for="fileInput">
+                Upload Files
+            </MudButton>
+        </div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
