--- a/EventManager.Client/Shared/Components/SL/SeriesDialog.razor
+++ b/EventManager.Client/Shared/Components/SL/SeriesDialog.razor
@@ -1,25 +1,37 @@
-<div class="w-100">
-    <EditForm EditContext="@Context">
-        <DataAnnotationsValidator />
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Title" Label="Title" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.Title" />
+<MudDialog>
+    <DialogContent>
+        <div>
+            <EditForm EditContext="@Context">
+                <DataAnnotationsValidator />
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Title" Label="Title" FullWidth="true" Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.Title" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudNumericField @bind-Value="Model.StartYear" Label="Start Year" FullWidth="true"
+                        Variant="Variant.Outlined" Min="0" Step="1" />
+                    <ValidationMessage For="() => Model.StartYear" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudNumericField @bind-Value="Model.EndYear" Label="End Year" FullWidth="true"
+                        Variant="Variant.Outlined" Min="0" Step="1" />
+                    <ValidationMessage For="() => Model.EndYear" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.Description" Label="Description" FullWidth="true"
+                        Variant="Variant.Outlined" Lines="3" />
+                    <ValidationMessage For="() => Model.Description" />
+                </div>
+                <div class="col col-12 p-1">
+                    <MudTextField @bind-Value="Model.TrailerUrl" Label="Trailer Url" FullWidth="true"
+                        Variant="Variant.Outlined" />
+                    <ValidationMessage For="() => Model.TrailerUrl" />
+                </div>
+            </EditForm>
         </div>
-        <div class="col col-12 p-1">
-            <MatNumericUpDownField class="w-100" DecimalPlaces="0" Minimum="0" @bind-Value="Model.StartYear" Dense="true" Label="Start Year" Outlined="true"></MatNumericUpDownField>
-            <ValidationMessage For="() => Model.StartYear" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatNumericUpDownField class="w-100" DecimalPlaces="0" Minimum="0" @bind-Value="Model.EndYear" Dense="true" Label="End Year" Outlined="true"></MatNumericUpDownField>
-            <ValidationMessage For="() => Model.EndYear" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.Description" Label="Description" Dense="true" Outlined="true" TextArea="true"></MatTextField>
-            <ValidationMessage For="() => Model.Description" />
-        </div>
-        <div class="col col-12 p-1">
-            <MatTextField class="w-100" @bind-Value="Model.TrailerUrl" Label="Trailer Url" Dense="true" Outlined="true"></MatTextField>
-            <ValidationMessage For="() => Model.TrailerUrl" />
-        </div>
-    </EditForm>
-</div>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Save">Save</MudButton>
+    </DialogActions>
+</MudDialog>
